[package]
name = "listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flow-sdk = { git = "https://github.com/barterYard/flow.rs", branch = "master"  }
serde = "1.0.160"
serde_json = "1.0.96"
log = "0.4.17"
serde_with = "2.3.2"
tokio = {version = "1.27.0"}
async-trait = "0.1.68"
