[package]
name = "listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
byc_helpers = {path="rust_byc_helper", features=["mongo", "logger"]}
flow-sdk = {git = "https://github.com/barterYard/flow.rs", branch = "master"}
futures = { version = "0.3.28" }
log = "0.4.19"
reqwest = {version = "0.11.18", features=["default", "default-tls", "json"]}
serde = "1.0.164"
serde_json = "1.0.99"
serde_with = "2.3.3"
tokio = {version = "1.29.1"}
gql = {path = "gql"}
