[package]
name = "gql"
version = "0.1.0"
edition = "2021"


[lib]
name = "gql"

[dependencies]
flow_helpers = { git = "https://github.com/barterYard/rust_flow_helper", branch = "main", features = [
  "mongo",
  "logger",
] }
futures = "0.3.28"
graphql_client = { version = "0.11.0", features = ["reqwest"] }
log = "0.4.17"
reqwest = "0.11.16"
serde = "1.0.160"
serde_json = "1.0.96"
serde_with = "2.3.2"
tokio = { version = "1.27.0", features = ["full"] }
