[package]
name = "gql"
version = "0.1.0"
edition = "2021"


[lib]
name = "gql"

[dependencies]
flow_helpers = { git = "https://github.com/barterYard/rust_flow_helper", branch = "main", features = [
  "mongo",
  "logger",
] }
futures = "0.3.28"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
log = "0.4.19"
reqwest = "0.11.18"
serde = "1.0.180"
serde_json = "1.0.104"
serde_with = "3.1.0"
tokio = { version = "1.29.1", features = ["full"] }
